# PureGold

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backtesting/: __init__.py  engine.py
compliance/: checklist.md
data_pipeline/: __init__.py  influx_loader.py  ingest.py
data_quality/: __init__.py  corporate_actions.py  schemas.py  validators.py
docs/: architecture.md  model_evaluation.md  performance.md  risk_management.md  setup_apple_silicon.md
infrastructure/influxdb/: config.toml  docker-compose.yml
logs/: .gitignore
metadata/: ingestion_runs.sql
models/predictive/: config.yaml  train.py
models/rl/: train.py
reference/: __init__.py  datasets.py
tests/: test_data_quality.py
